# basketeer

./: .gitignore  CLAUDE.md  PLAN.md  SETUP.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  logging_setup.py  main.py
backend/app/agents/: __init__.py  classifier.py  loop.py  tool_builders.py  tools.py
backend/app/agents/prompts/: __init__.py  agent.md  classifier.md  write.md
backend/app/api/: __init__.py  ask.py  health.py
backend/app/cache/: __init__.py  cache.py  in_memory_cache.py  wrappers.py
backend/app/data/embed/: __init__.py  builder.py  schema.py
backend/app/data/translate/: __init__.py  coefficients.py  translator.py
backend/app/llm/: __init__.py  router.py
backend/app/llm/providers/: __init__.py  base.py  fake.py
backend/app/primitives/: __init__.py  compute.py  find_similar.py  write.py
backend/app/sandbox/: __init__.py  sandbox.py
backend/app/similarity/: __init__.py  in_memory_store.py  vector_store.py
backend/tests/: test_health.py  test_logging_setup.py
backend/tests/agents/: test_classifier.py  test_loop.py  test_tool_builders.py  test_tools.py
backend/tests/api/: test_ask.py
backend/tests/cache/: test_in_memory_cache.py  test_wrappers.py
backend/tests/data/embed/: test_builder.py  test_schema.py
backend/tests/data/translate/: test_translator.py
backend/tests/llm/: test_fake_provider.py  test_router.py
backend/tests/primitives/: test_compute.py  test_find_similar.py  test_write.py
backend/tests/sandbox/: test_sandbox.py
backend/tests/similarity/: test_in_memory_store.py
